# venom

./: .clang-format  .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: 100MPi_global.vnm  100MPi_local.vnm  fib40.vnm  for.vnm  getattr.vnm  struct.vnm
debug/: assignment.vnm  big.vnm  break.vnm  breakcomplex.vnm  call.vnm  cursed_struct.vnm  doubleloop.vnm  fn.vnm  for.vnm  for_local.vnm  global_loop.vnm  if.vnm  logical.vnm  loop.vnm  not.vnm  null.vnm  simple_fn.vnm  strcat.vnm  try_this.vnm  undefined.vnm  while.vnm
examples/: example01.vnm  example02.vnm  example03.vnm  example04.vnm  example06.vnm  example07.vnm  example08.vnm  example09.vnm  example10.vnm  example11.vnm  example12.vnm  example13.vnm  example14.vnm  fib.vnm  fizzbuzz.vnm  list.vnm  method.vnm
hooks/: pre-commit
src/: args.c  args.h  ast.c  ast.h  compiler.c  compiler.h  disassembler.c  disassembler.h  dynarray.c  dynarray.h  err.c  err.h  function.h  internal_object.c  internal_object.h  main.c  object.c  object.h  optimizer.c  optimizer.h  parser.c  parser.h  semantics.c  semantics.h  table.c  table.h  tokenizer.c  tokenizer.h  util.c  util.h  vm.c  vm.h
tests/: test_array.py  test_assignment.py  test_bitwise.py  test_block.py  test_calculator.py  test_comparison.py  test_compound_assignment.py  test_debug.py  test_declaration.py  test_decorators.py  test_equality.py  test_errors.py  test_examples.py  test_func.py  test_import.py  test_logical.py  test_loop_label_error.py  test_negate.py  test_parser_error.py  test_pointers.py  test_strings.py  util.py
(+119 files in other folders)
